WIP start has fininshed. need to connect this to a backend and database.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 
 <body>
     <div class="container">
-        <h1>Min Lista</h1>
+        <h1>Bok lista</h1>
         <select id="categorySelect">
-            <!-- <option value="reacher">Reacher</option>
-            <option value="sherlock">Sherlock Holmes</option>
-            <option value="poirot">Hercule Poirot</option> -->
         </select>
         <ul id="itemList"></ul>
         <button id="addItemBtn">Lägg till innehåll</button>
