changing functions for add items to list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <h1>Bok lista</h1>
         <select id="categorySelect">
+            <option value="NoKat"></option>
         </select>
         <ul id="itemList"></ul>
         <button id="addItemBtn">Lägg till innehåll</button>
