some new fixes , adding and updatung

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
         </div>
     </div>
 
+
+    <!-- Modal för ändring -->
+    <div id="editModal" class="modal">
+        <div class="modal-content">
+            <span id="closeEditModal" class="close">&times;</span>
+            <h2>Ändra Bokinformation</h2>
+            <input type="text" id="editTitleInput" placeholder="Titel">
+            <textarea id="editDescriptionInput" placeholder="Beskrivning"></textarea>
+            <button id="saveEditBtn">Spara Ändringar</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
