--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="container">
         <h1>Bok lista</h1>
         <select id="categorySelect">
